# shiny-disco

./: README.md  docker-compose.yaml
service/: Dockerfile  pyproject.toml  run.sh
service/service/: conf.py  download_pages.py  loader.py  main.py  store.py  wikipedia_pages.json
