[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["srusskih <smilemouse2002@ukr.net>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
neo4j = "^5.16.0"
langchain = "^0.1.1"
langchain-community = "^0.0.13"
tiktoken = "^0.5.2"
wikipedia = "^1.4.0"
sentence-transformers = "^2.2.2"
jq = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
